--- a/METplus/genindex.html
+++ b/METplus/genindex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://dtcenter.github.io/METplus/gen</title>
-<meta http-equiv="refresh" content="0; URL=https://dtcenter.github.io/METplus/gen">
-<link rel="canonical" href="https://dtcenter.github.io/METplus/gen">
+<title>Redirecting to https://dtcenter.github.io/METplus/genindex.html</title>
+<meta http-equiv="refresh" content="0; URL=https://dtcenter.github.io/METplus/genindex.html">
+<link rel="canonical" href="https://dtcenter.github.io/METplus/genindex.html">
